fix: sign in, remade workflow, improved deps and reduced installer size